# Docker

./: .gitmodules  README.md  images.txt
.github/: dependabot.yml
.github/github/: dependabot.yml
.github/workflows/: action-apiserver.yml  action-mirroring.yml  action-netguard.yml  action-novel.yml  action-oci.yml  action-shadowgate.yml  action-submanager.yml  action-telebot.yml  action-template.yml  action-test.yml
Archived/novel-webshare-scraperapi/: pyproject.toml
Archived/shadowgate-xui/: Dockerfile  subscription.py  xui.py
Archived/submanager/: crontab.txt  remove_subscription.py
apiserver/: Dockerfile  main.py  pyproject.toml  requirements.txt  test.py
mirroring/: images.txt  main.py
netguard/: Dockerfile  main.py  requirements.txt
novel/: Dockerfile  main.py  proxy_only.py  pyproject.toml  requirements.txt
oci/: Dockerfile  composer.json  crontab.txt  index.php
shadowgate/: Dockerfile  constants.py  main.py  mitce.py  pyproject.toml  requirements.txt  subscription.py  sui.py  xui.py
submanager/: Dockerfile  config.py  crontab.txt  entry.sh  main.py  remove_subscription.py  requirements.txt  update_mitce_config.py  update_monitor_config.py  update_nginx_config.py  update_subscription.py  update_xui_config.py  utilities.py  xui_credentials.py
telebot/: Dockerfile  main.py  pyproject.toml  requirements.txt
template/: Dockerfile  async_server.py  crontab.txt  custom_logger.py  entry.sh  logger.py  main.py  pyproject.toml  requirements.txt  scheduler.py  signal_handle.py  simple_health_server.py
test/: main.py
(+1 files in other folders)
