[project]
name = "apiserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.0",
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "uvicorn>=0.37.0",
    "yfinance>=0.2.66",
]
