[project]
name = "apiserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.3",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "uvicorn>=0.51.0",
    "yfinance>=1.5.1",
]
